--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "rn-todo",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
+  "author": "Anton Degnera <anton.degnera@gmail.com>",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
